generated/checkers/gen/AllGen-Out-of-Bound-63ae548f1054a0b71678d0349c7dc9628ddd42ca/build_logs/syntax-repair-04/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkLocation(clang::ento::SVal, bool, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:193:57: error: unable to deduce ‘const auto*’ from ‘IdxSV.clang::ento::SVal::getAs<clang::ento::nonloc::ConcreteInt>()’
  193 |   if (const auto *CI = IdxSV.getAs<nonloc::ConcreteInt>()) {
      |                                                         ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:193:57: note:   mismatched types ‘const auto*’ and ‘std::optional<clang::ento::nonloc::ConcreteInt>’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:201:57: error: unable to deduce ‘const auto*’ from ‘IdxSV.clang::ento::SVal::getAs<clang::ento::nonloc::SymbolVal>()’
  201 |   if (const auto *SymV = IdxSV.getAs<nonloc::SymbolVal>()) {
      |                                                         ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:201:57: note:   mismatched types ‘const auto*’ and ‘std::optional<clang::ento::nonloc::SymbolVal>’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:81:6: warning: ‘bool {anonymous}::SAGenTestChecker::isDefiniteOOB(const clang::ento::nonloc::ConcreteInt&, uint64_t) const’ defined but not used [-Wunused-function]
   81 | bool SAGenTestChecker::isDefiniteOOB(const nonloc::ConcreteInt &Idx,
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
